fdo#66024 - Formula Editor: make wide accents stretchy when exported to MathML

Change-Id: Ifd0adc51d79e0673661b5646d27f657768ea5b20
Reviewed-on: https://gerrit.libreoffice.org/4450
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>